# finite-elements-code

./: .gitignore  CMakeLists.txt  FEMlibraryConfig.cmake.in  README.md  data.csv
include/: croutReduction.h  crout_reduction.h  elastic.h  elasticPredictor.h  elements.h  flowRule.h  forceVector.h  gaussElimination.h  gauss_elimination.h  inputData.h  jacobian.h  materials.h  matrixArithmetic.h  matrixUtils.h  matrix_arithmetic.h  matrix_utils.h  nodes.h  outputData.h  plasticCorrector.h  postProcessing.h  printUtils.h  print_matrix.h  remapping.h  returnMapping.h  shapeFunctions.h  skyline.h  solveCroutSkyline.h  stiffnessMatrix.h  testCroutReduction.h  testFlowRule.h  testGaussElimination.h  testMaterials.h  testMatrixArithmetic.h  testMatrixUtils.h  testNodes.h  testRemapping.h  testSkyline.h  testWorkHardening.h  vonMisesYield.h  workHardening.h
python/: graph_nodes.py  two_dim_elastoplastic.py
sample/: data.csv
src/: CMakeLists.txt  main.c
src/cfd/: CMakeLists.txt
src/codes/: CMakeLists.txt  femElastoPlastic.c
src/data/: CMakeLists.txt  inputData.c  outputData.c
src/elasticity/: CMakeLists.txt  elastic.c  elasticPredictor.c  jacobian.c  shapeFunctions.c  stiffnessMatrix.c
src/elements/: CMakeLists.txt  elements.c  forceVector.c  jacobian.c  shapeFunctions.c  stiffnessMatrix.c
src/materials/: CMakeLists.txt  materials.c
src/math/: CMakeLists.txt  matrixArithmetic.c  matrix_arithmetic.c  print_matrix.c
src/mesh/: CMakeLists.txt  nodes.c  remapping.c
src/plasticity/: CMakeLists.txt  flowRule.c  plasticCorrector.c  returnMapping.c  vonMisesYield.c  workHardening.c
src/postprocessing/: CMakeLists.txt  postProcessing.c
src/solver/: CMakeLists.txt  croutReduction.c  crout_reduction.c  gaussElimination.c  gauss_elimination.c  skyline.c  solveCroutSkyline.c
src/utils/: CMakeLists.txt  matrixUtils.c  matrix_utils.c  printUtils.c
test/: CMakeLists.txt  example.c  test.c  testCroutReduction.c  testFlowRule.c  testGaussElimination.c  testMaterials.c  testMatrixArithmetic.c  testMatrixUtils.c  testNodes.c  testRemapping.c  testSkyline.c  testWorkHardening.c  test_main.c
